Fixed login styling going off screen on small devices

--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -95,5 +95,5 @@
     text-align: center;
     height: 35rem;
     width: 45%;
-    min-width: 350px;
+    min-width: 320px;
 }
